--- a/src/main/resources/templates/employee/employee-create.html
+++ b/src/main/resources/templates/employee/employee-create.html
@@ -22,15 +22,20 @@
                 <form th:object="${employee}" th:action="@{/employee/insert}" method="post">
                     <div class="form-row">
                         <div class="form-group col">
-                            <label for="inputEmail4">First Name</label>
+                            <label for="inputFirstName4">First Name</label>
                             <input type="text" class="form-control" id="inputFirstName4" placeholder="First Name" th:field="*{firstName}">
+                            <div class="text-danger" th:if="${#fields.hasErrors('firstName')}">
+                                <ol>
+                                    <li th:each="error : ${#fields.errors('firstName')}" th:text="${error}"></li>
+                                </ol>
+                            </div>
                         </div>
                         <div class="form-group col">
-                            <label for="inputPassword4">Last Name</label>
+                            <label for="inputLastName4">Last Name</label>
                             <input type="text" class="form-control" id="inputLastName4" placeholder="Last Name" th:field="*{lastName}">
                         </div>
                         <div class="form-group col4">
-                            <label for="inputPassword4">Birthday</label>
+                            <label for="inputBirthday4">Birthday</label>
                             <input type="date" class="form-control" id="inputBirthday4" th:field="*{birthday}">
                         </div>
                     </div>
